k8s/order_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: lgcns

spec:
  revisionHistoryLimit: 2

  replicas: 2
  selector:
    matchLabels:
      app: order-pod

  template:
    metadata:
      labels:
        app: order-pod

    spec:
      # docker container
      containers:
        - name: order-container

          # rolling update
          image: 310095858382.dkr.ecr.us-west-2.amazonaws.com/order-simchaemin-backend:latest

          ports:
            - containerPort: 8888

          # autoscaler(pod) 작업을 위해서 추가함
          resources:
            # 컨테이너가 사용할수 있는 리소스의 최대치
            limits:
              cpu: "1"
              memory: "500Mi"
            # 컨테이너가 시작될떄 보장받아야 하는 최소 자원
            requests:
              cpu: "0.5"
              memory: "250Mi"
---
# core service setting
# core group : pod, service, ConfigMap, Secret, namespace
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: lgcns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8888
  selector:
    app: order-pod
